# PyHyperbolic3D

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_html/.doctrees/: environment.pickle  index.doctree
docs/_templates/: layout.html
examples/: GreatDeltoidalIcositetrahedron.py  GreatDeltoidalIcositetrahedron_animation.py  barth-like_polyhedron.py  barth-like_polyhedron_anim.py  gircope.py  griddip.py  griddip_animation.py  icosahedron.py  icosahedron_colored.py  icosahedron_colored_anim.py  icosahedron_slider.py  j47.py  pentagrammicPrism.py  pentagrammicPrism_animation.py
hyperbolic3d/: gyro.py
tests/: test_hyperbolic3d.py
