[tool.poetry]
name = "hyperbolic3d"
version = "0.1.0"
description = ""
authors = ["Stéphane Laurent <laurent_step@outook.fr>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
pyvista = "^0.32.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
